Add Nine.Hosting.Abstractions package.

--- a/src/Nine.Hosting/project.json
+++ b/src/Nine.Hosting/project.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "Microsoft.Framework.CommandLineUtils": { "version": "1.0.0-*", "type": "build" },
     "Microsoft.Framework.Runtime.Abstractions": "1.0.0-beta5",
+    "Nine.Hosting.Abstractions": "1.0.0-*",
     "SharedMemory": "1.1.4"
   },
-  
+
   "compilationOptions": {
     "allowUnsafe": true
   },
@@ -19,8 +20,9 @@
   "frameworks": {
     "dnx451": {
       "frameworkAssemblies": {
-        "System.Windows.Forms": "4.0.0.0",
-        "System.Drawing": "4.0.0.0"
+        "System.Drawing": "4.0.0.0",
+        "System.Runtime": "4.0.10.0",
+        "System.Windows.Forms": "4.0.0.0"
       }
     }
   }
